[tool.poetry]
name = "openoversight"
version = "1.8.0"
description = ""
authors = ["OrcaCollective"]
license = "GPLv3"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
authlib = "1.3.1"
bootstrap-flask = "2.4.1"
boto3 = "1.35.53"
cachetools = "5.5.0"
email-validator = "2.2.0"
flask = "3.1.0"
flask-compress = "1.14"
flask-limiter = "3.12"
flask-login = "0.6.3"
flask-mail = "0.10.0"
flask-migrate = "4.0.7"
flask-sitemap = "0.4.0"
flask-sqlalchemy = "3.1.1"
flask-wtf = "1.2.1"
google-api-python-client = "2.166.0"
gunicorn = "23.0.0"
pillow = "11.1.0"
psycopg2-binary = "2.9.10"
python-dateutil = "2.9.0.post0"
sqlalchemy = "2.0.32"
us = "3.2.0"
wtforms = "3.2.1"
wtforms-sqlalchemy = "0.4.2"

[tool.poetry.group.dev.dependencies]
faker = "35.2.0"
flake8 = "7.1.1"
ipython = "^8.30.0"
mypy = "1.13.0"
myst-parser = "4.0.1"
pandas = "^2.2.1"
pre-commit = "4.0.1"
pytest = "8.3.4"
pytest-cov = "6.0.0"
pytest-env = "1.1.5"
pytest-flake8 = "1.3.0"
pytest-playwright = "0.7.0"
pytest-sugar = "1.0.0"
pytest-xdist = "3.6.1"
sphinx = "7.4.7"
sphinx-autobuild = "2024.2.4"

[tool.pytest.ini_options]
addopts = "--dist=loadgroup --tracing=retain-on-failure --output=/test-results"
cache_dir = "/tmp"

[tool.pytest_env]
ENV="testing"
FLASK_APP="OpenOversight/app:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
